@startuml
'https://plantuml.com/class-diagram

class License {
  + type
  + text?
  + hash?
}

enum LicenseType {
None
Logion
Specific
}

class LicenseItem {
  + code
  + text
  + shortDescription
}

License *-- "0..n" LicenseItem

License::type --> LicenseType

note bottom of LicenseType
Can be further extended,
for example TokenArt, CreativeCommons, etc.
end note

note right of License::text
"Logion": Stored (text file) in the code
end note

note left of LicenseItem::text
Stored (typescript) )in the code.
end note

@enduml
